--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -1,1 +1,21 @@
-<h1>hello bilateral</h1>
+<div class="row">
+	<div class="col-sm-12">
+    here timeline
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-3">
+    here dd1
+  </div>
+  <div class="col-sm-6">
+    here viz
+  </div>
+  <div class="col-sm-3">
+        here dd1
+  </div>
+</div>
+<div class="row">
+	<div class="col-sm-12">
+    here grid
+  </div>
+</div>
