--- a/client/css/style.css
+++ b/client/css/style.css
@@ -62,3 +62,23 @@ body > .container {
   padding-right: 15px;
   padding-left: 15px;
 }
+
+/* graph axis */
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.brush{
+  fill:black;
+  fill-opacity:0.2;
+  stroke:none;
+}
+
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 100%; 
+    height: 500px
+}
