country view bootstrapped

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -1,1 +1,26 @@
-<h1>hello country</h1>
+<div class="row">
+	<div class="timeline-cont col-sm-12">
+    <h4>Trade exchanges between {{startDate}} – {{endDate}}</h4>
+    <div stacked-timeline-country></div>
+  </div>
+</div>
+<div id="select" class="row">
+  <div class="select-dropdown col-sm-3">
+    <ui-select ng-model="sourceEntity.selected" theme="bootstrap">
+    <match placeholder="Search and select a country...">{{$select.selected.reporting}}</match>
+    <choices repeat="item in reportingEntities | filter: $select.search">
+      <div ng-bind-html="item.reporting | highlight: $select.search"></div>
+    </choices>
+  </ui-select>
+  </div>
+  <div class="col-sm-6">
+    <div barchart-country></div>
+    <div class="row">
+    </div>
+  </div>
+</div>
+<div class="row table-cont">
+  <div class="col-sm-12 grid-cont">
+    <div class="gridStyle" ng-grid="gridOptions"></div>
+  </div>
+</div>
