added filter on country view

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -320,6 +320,12 @@ font-size: 1.1em;
   text-decoration: none;
 }
 
+/* country */
+
+.filter-group {
+  margin: 10px 0;
+}
+
 /* Page transition */
 .fade-view {
     position: absolute;
