--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -4,16 +4,27 @@
     <div stacked-timeline-world></div>
   </div>
 </div>
-<div id="select" class="row">
-  <div class="select-dropdown col-sm-3">
-    <ui-select ng-model="entities.sourceEntity.selected" theme="bootstrap">
-    <match placeholder="Search and select a country...">{{$select.selected.RICname}}</match>
-    <choices repeat="item in reportingEntities | filter: $select.search">
-      <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-    </choices>
-  </ui-select>
+<div class="row">
+  <div class="col-sm-3">
+    <div id="select" class="row">
+      <div class="select-dropdown col-sm-12">
+        <ui-select ng-model="entities.sourceEntity.selected" theme="bootstrap">
+        <match placeholder="Search and select a country...">{{$select.selected.RICname}}</match>
+        <choices repeat="item in reportingEntities | filter: $select.search">
+          <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+        </choices>
+      </ui-select>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div list-world></div>
+      </div>
+    </div>
   </div>
-
+  <div class="col-sm-9 white">
+    <div linechart-world></div>
+  </div>
 
 <!--   <div class="col-sm-6">
     <div stream></div>
