--- a/client/css/style.css
+++ b/client/css/style.css
@@ -330,12 +330,15 @@ font-size: 1.1em;
   background-color: white;
 }
 
+/* world */
+
 #list-world-container {
   padding: 10px 0;
 }
 
 .alert-custom {
   background-color: white;
+  border-radius: 0;
 }
 
 /* Page transition */
