--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -22,8 +22,26 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-9 white">
-    <div linechart-world></div>
+  <div class="col-sm-9">
+    <!-- <div class="row"> -->
+      <div class="col-sm-12 white">
+        <div class="filter-group">
+          <p>
+            value by:
+            <div class="btn-group">
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>import</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>export</label>
+            </div>
+          </p>
+        </div>
+      </div>
+    <!-- </div> -->
+    <!-- <div class="row"> -->
+      <div class="col-sm-12 white">
+        <div linechart-world></div>
+      </div>
+    <!-- </div> -->
   </div>
 
 <!--   <div class="col-sm-6">
