--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -62,10 +62,10 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <div barchart-country></div>
+        <div class="barchart-country" barchart-country></div>
       </div>
-      <div class="col-sm-12 white">
-        <div class="filter-group">
+      <div class="col-sm-12">
+        <div class="filter-group" ng-show="RICentitiesDD.length">
           <p>
             value by:
             <div class="btn-group">
