--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -4,32 +4,16 @@
     <div stacked-timeline-country></div>
   </div>
 </div>
-<div id="select" class="row">
+<div id="select-doubleChart" class="row">
   <div class="col-sm-3">
     <div class="row">
       <div class="select-dropdown col-sm-12">
         <ui-select ng-model="entities.sourceEntity.selected" theme="bootstrap">
-          <match placeholder="Search and select a country...">{{$select.selected.RICname}}</match>
+          <match placeholder="Search and select a Country...">{{$select.selected.RICname}}</match>
           <choices repeat="item in reportingEntities | filter: $select.search">
             <div ng-bind-html="item.RICname | highlight: $select.search"></div>
           </choices>
         </ui-select>
-      </div>
-    </div>
-    <div class="row">
-      <div class="select-dropdown col-sm-12" ng-show="RICentitiesDD.length">
-        <p>Select up to 5 partners</p>
-        <ui-select ng-model="entities.multiEntity.selected" theme="bootstrap">
-          <match placeholder="Search and select a country...">{{$select.selected.RICname}}</match>
-          <choices repeat="item in RICentitiesDD | filter: $select.search">
-            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-          </choices>
-        </ui-select>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div list-world></div>
       </div>
     </div>
   </div>
@@ -37,9 +21,8 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="filter-group">
-          <p>
-            filtered by:
-            <div class="btn-group">
+            <div class="btn-group pull-left">
+              <p class="filter">filtered by</p>
               <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'all'" uncheckable>all</label>
               <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'city/part_of'" uncheckable>city/part_of</label>
               <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'colonial_area'" uncheckable>colonial_area</label>
@@ -47,16 +30,14 @@
               <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'geographical_area'" uncheckable>geographical_area</label>
               <label class="btn btn-sm btn-default" ng-model="filter" btn-radio="'group'" uncheckable>group</label>
             </div>
-          </p>
-          <p>
-            ordered by:
-            <div class="btn-group">
+            <div class="btn-group pull-right">
+              <p class="filter">ordered by</p>
               <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'tot'" uncheckable>total</label>
               <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'imp'" uncheckable>import</label>
               <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'exp'" uncheckable>export</label>
               <!-- <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'key'" uncheckable>name</label> -->
             </div>
-          </p>
+            <div style="clear:both"></div>
         </div>
       </div>
     </div>
@@ -64,16 +45,56 @@
       <div class="col-sm-12">
         <div class="barchart-country" barchart-country></div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div id="select-lineChart" class="row">
+  <div class="col-sm-3">
+    <div class="row">
+      <div class="select-dropdown col-sm-12" ng-show="RICentitiesDD.length">
+        <ui-select ng-model="entities.sourceCountryEntity.selected" theme="bootstrap">
+          <match placeholder="Select a Country...">{{$select.selected.RICname}}</match>
+          <choices repeat="item in reportingCountryEntities | filter: $select.search">
+            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+          </choices>
+        </ui-select>
+          <ui-select ng-model="entities.sourceColonialEntity.selected" theme="bootstrap">
+          <match placeholder="Select a Colonial area...">{{$select.selected.RICname}}</match>
+          <choices repeat="item in reportingColonialEntities | filter: $select.search">
+            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+          </choices>
+        </ui-select>
+        <ui-select ng-model="entities.sourceGeoEntity.selected" theme="bootstrap">
+          <match placeholder="Select a Geographical area...">{{$select.selected.RICname}}</match>
+          <choices repeat="item in reportingGeoEntities | filter: $select.search">
+            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+          </choices>
+        </ui-select>
+        <ui-select ng-model="entities.sourceContinentEntity.selected" theme="bootstrap">
+          <match placeholder="Select a Continent...">{{$select.selected.RICname}}</match>
+          <choices repeat="item in reportingContinentEntities | filter: $select.search">
+            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+          </choices>
+        </ui-select>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="filter">selected entities [up to 5]</p>
+        <div list-world></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-9">
+    <div class="row">
       <div class="col-sm-12">
         <div class="filter-group" ng-show="RICentitiesDD.length">
-          <p>
-            value by:
-            <div class="btn-group">
+            <div class="btn-group pull-right">
               <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
               <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>import</label>
               <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>export</label>
             </div>
-          </p>
         </div>
       </div>
       <div class="col-sm-12">
@@ -82,6 +103,7 @@
     </div>
   </div>
 </div>
+
 <div class="row table-cont">
   <div class="col-sm-12 grid-cont">
     <div class="gridStyle" ng-grid="gridOptions"></div>
