--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -1,11 +1,12 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
-    <h4>Trade exchanges between {{startDate}} – {{endDate}}</h4>
+    <h4>Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span> (aggregated), {{minDate}} – {{maxDate}}, in £</h4>
     <div stacked-timeline-world></div>
   </div>
 </div>
 <div class="row">
   <div class="col-sm-3">
+    <h3 class="subtitle">select up to 5 reporting entities</h3>
     <div id="select" class="row">
       <div class="select-dropdown col-sm-12">
         <ui-select ng-model="entities.sourceCountryEntity.selected" theme="bootstrap">
@@ -36,13 +37,14 @@
     </div>
     <div class="row list">
       <div class="col-sm-12">
-        <h3>selected entities [up to 5]</h3>
+        <h3>selected entities</h3>
         <div list-world></div>
       </div>
     </div>
   </div>
   <div class="col-sm-9">
     <!-- <div class="row"> -->
+      <h3 class="subtitle">Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in £</h3>
       <div class="col-sm-12 white">
         <div class="filter-group">
             <div class="btn-group pull-right">
