added linechart rollover

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -41,8 +41,8 @@
             <div class="btn-group pull-right">
               <p class="filter">ordered by</p>
               <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'tot'" uncheckable>total</label>
-              <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'imp'" uncheckable>import</label>
-              <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'exp'" uncheckable>export</label>
+              <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'imp'" uncheckable>imports</label>
+              <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'exp'" uncheckable>exports</label>
               <!-- <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'key'" uncheckable>name</label> -->
             </div>
             <div style="clear:both"></div>
@@ -108,8 +108,8 @@
         <div class="filter-group" ng-show="RICentitiesDD.length">
             <div class="btn-group pull-right">
               <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
-              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>import</label>
-              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>export</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
+              <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
             </div>
         </div>
       </div>
