commented table fix #27

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -120,8 +120,8 @@
   </div>
 </div>
 
-<div class="row table-cont">
+<!-- <div class="row table-cont">
   <div class="col-sm-12 grid-cont">
     <div class="gridStyle" ng-grid="gridOptions"></div>
   </div>
-</div>
+</div> -->
