--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -39,8 +39,8 @@
   </ui-select>
   </div>
 </div>
-<div class="row table-cont">
+<!-- <div class="row table-cont">
   <div class="col-sm-12 grid-cont">
     <div class="gridStyle" ng-grid="gridOptions"></div>
   </div>
-</div>
+</div> -->
