--- a/client/partials/continent.html
+++ b/client/partials/continent.html
@@ -121,8 +121,8 @@
   </div>
 </div>
 
-<div class="row table-cont">
+<!-- <div class="row table-cont">
   <div class="col-sm-12 grid-cont">
     <div class="gridStyle" ng-grid="gridOptions"></div>
   </div>
-</div>
+</div> -->
