--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -63,8 +63,8 @@
     <!-- </div> -->
   </div>
 </div>
-<div class="row table-cont">
+<!-- <div class="row table-cont">
   <div class="col-sm-12 grid-cont">
     <div class="gridStyle" ng-grid="gridOptions"></div>
   </div>
-</div>
+</div> -->
