added modal fix #26

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -318,7 +318,7 @@ font-size: 1.1em;
   margin: 15px 0;
 }
 
-.filter-group .btn {
+.filter-group .btn, .modal-content .btn {
   border-radius: 0px;
 }
 
@@ -388,6 +388,17 @@ font-size: 1.1em;
   border-left-color: #777;
   border-radius: 30px;
 }
+
+/* modal */
+.modal-content{
+  border-radius: 0px;
+  text-align: center;
+}
+
+.modal-footer{
+  text-align: center;
+}
+
 /* Page transition */
 .fade-view {
     position: absolute;
