added currency switch button fix #16

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -399,6 +399,9 @@ font-size: 1.1em;
   text-align: center;
 }
 
+.currency {
+  margin-left: 20px;
+}
 /* Page transition */
 .fade-view {
     position: absolute;
