--- a/client/partials/continent.html
+++ b/client/partials/continent.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="timeline-cont col-sm-12">
-    <h4>Trade exchanges by {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}</h4>
+    <h4>Trade exchanges by {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
     <div stacked-timeline-continent></div>
   </div>
 </div>
@@ -9,7 +9,7 @@
     <h3 class="subtitle">choose a reporting continent:</h3>
   </div>
   <div class="col-sm-9">
-    <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} by partners, {{startDate}} – {{endDate}}, in £</h3>
+    <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} by partners, {{startDate}} – {{endDate}}, in {{actualCurrency}}</h3>
   </div>
 </div>
 <div id="select-doubleChart" class="row">
@@ -62,7 +62,7 @@
     <h3 class="subtitle">select up to 5 partners:</h3>
   </div>
   <div class="col-sm-9">
-    <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in £</h3>
+    <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in {{actualCurrency}}</h3>
   </div>
 </div>
 
