--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
-    <h4>Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span> (aggregated), {{minDate}} – {{maxDate}}, in £</h4>
+    <h4>Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span> (aggregated), {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
     <div stacked-timeline-world></div>
   </div>
 </div>
@@ -44,7 +44,7 @@
   </div>
   <div class="col-sm-9">
     <!-- <div class="row"> -->
-      <h3 class="subtitle">Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in £</h3>
+      <h3 class="subtitle">Total trade of  <span ng-repeat="country in reporting">{{country.RICname}}<span ng-if="!$last">, </span></span>, {{startDate}} – {{endDate}}, in {{actualCurrency}}</h3>
       <div class="col-sm-12 white">
         <div class="filter-group">
             <div class="btn-group pull-right">
