display missing data

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -2,6 +2,7 @@
 	<div class="timeline-cont col-sm-12">
     <h4>Trade exchanges between {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, reported by {{entities.sourceEntity.selected.RICname}}, in {{actualCurrency}}</h4>
     <div stacked-timeline></div>
+    <div missing></div>
   </div>
 </div>
 <div class="row">
