--- a/client/partials/modal.html
+++ b/client/partials/modal.html
@@ -1,9 +1,9 @@
 <div class="modal-body">
  <p>
-    There is <strong>no data available</strong> in the database for this couple of countries
+    There is <strong>no data available</strong> in the database for this entry
  </p>
   <p>
-    Choose another country!
+    Choose another one!
  </p>
 </div>
 <div class="modal-footer">
