--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -2,6 +2,7 @@
 	<div class="timeline-cont col-sm-12">
     <h4>Trade exchanges by {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
     <div stacked-timeline-country></div>
+    <div missing></div>
   </div>
 </div>
 <div class="row">
