show hide data table

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -41,8 +41,15 @@
   </ui-select>
   </div>
 </div>
-<!-- <div class="row table-cont">
+<div class="row">
+  <div class="col-sm-12 text-center shdt">
+    <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+        Show/Hide data table
+    </button>
+  </div>
+</div>
+<div ng-if="viewTable" class="row table-cont">
   <div class="col-sm-12 grid-cont">
     <div class="gridStyle" ng-grid="gridOptions"></div>
   </div>
-</div> -->
+</div>
